--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,4 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+numpy~=1.19.2
+matplotlib~=3.3.2
+tqdm~=4.51.0
+setuptools~=50.3.1
